--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-export S3_BUCKET_NAME = 'your-S3-BUCKET-NAME'
-export AWS_ACCESS_KEY_ID = 'your-ACCESS-KEY-ID'
-export AWS_SECRET_ACCESS_KEY = 'your-AWS-SECRET-KEY'
+export S3_BUCKET_NAME = 'myactivitytrackerbyvinove'
+export AWS_ACCESS_KEY_ID = 'AKIA6ODU3XBWQ2AUZK4E'
+export AWS_SECRET_ACCESS_KEY = 's/RX8sQ3mHJA1PWSyW8k1huFiv0tHyjZGwwxEQYY'
